kubernetes/gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: cassette-operator
  labels:
    app: gateway
    serviceType: public
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
      labels:
        app: gateway
        serviceType: public
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - Gateway
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - Compute
                      - Gateway
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: cassette-gateway
      containers:
        - name: gateway
          image: quay.io/ulagbulag/cassette-server:latest
          imagePullPolicy: Always
          command:
            - cassette-gateway
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            httpGet:
              path: /v1/cassette/
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            httpGet:
              path: /v1/cassette/_health
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: cassette-operator
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
