kubernetes/player.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player
  namespace: cassette-operator
  labels:
    app: player
    serviceType: public
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: player
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
      labels:
        app: player
        serviceType: public
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - Gateway
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - Compute
                      - Gateway
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: server
          image: quay.io/ulagbulag/cassette:latest
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 6080
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            httpGet:
              path: /
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            httpGet:
              path: /_health
              port: http
          resources:
            requests:
              cpu: 30m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: player
  namespace: cassette-operator
spec:
  selector:
    app: player
  ports:
    - name: http
      port: 80
      targetPort: 6080
      protocol: TCP
