kubernetes/client-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  namespace: cassette-operator
  annotations:
    cert-manager.io/cluster-issuer: example.com
    # nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    # nginx.ingress.kubernetes.io/auth-url: https://example.com/oauth2/auth
    # nginx.ingress.kubernetes.io/auth-signin: https://example.com/oauth2/start?rd=$escaped_request_uri
    # nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - secretName: example.com-certs
      hosts:
        - example.com
  ingressClassName: example.com
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
