kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassette
  namespace: cassette-operator
  annotations:
    cert-manager.io/cluster-issuer: example.com
    # nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    # nginx.ingress.kubernetes.io/auth-url: https://example.com/oauth2/auth
    # nginx.ingress.kubernetes.io/auth-signin: https://example.com/oauth2/start?rd=$escaped_request_uri
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - secretName: example.com-certs
      hosts:
        - example.com
  ingressClassName: example.com
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /$
            pathType: ImplementationSpecific
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /([0-9a-z_-]*).css$
            pathType: ImplementationSpecific
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /([0-9a-z_-]*).js$
            pathType: ImplementationSpecific
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /([0-9a-z_-]*).wasm$
            pathType: ImplementationSpecific
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /favicon.ico$
            pathType: ImplementationSpecific
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /assets/
            pathType: Prefix
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /c/
            pathType: Prefix
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /error/
            pathType: Prefix
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /snippets/
            pathType: Prefix
            backend:
              service:
                name: player
                port:
                  number: 80
          - path: /v1/cassette/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
          - path: /webfonts/
            pathType: Prefix
            backend:
              service:
                name: player
                port:
                  number: 80
